[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/static_floor.png" type="Texture" id=1]
[ext_resource path="res://Projectile/lightnin/spray/eletric_floor_static.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 12 )

[node name="Node2D" type="Node2D"]
z_index = 1
script = ExtResource( 2 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 0
collision_mask = 0
mass = 0.00102041
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="RigidBody2D"]
scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="RigidBody2D"]
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="RigidBody2D"]

[connection signal="body_entered" from="RigidBody2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="RigidBody2D/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="RigidBody2D/Timer" to="." method="_on_Timer_timeout"]
